syntax = "proto3";

package model;

option go_package = "github.com/yachnytskyi/golang-mongo-grpc/internal/post/delivery/grpc/v1/model";
import "google/protobuf/timestamp.proto";

message Post {
    string PostID = 1;
    string Title = 2;
    string Content = 3;
    string Image = 4;
    string UserID = 5;
    string User = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message PostView { Post post = 1; }